# zmey_gorynych

./: .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  app.py  docker-compose.yaml  pyproject.toml  pytest.ini  settings.py  yoyo.ini
apps/devices/: __init__.py  event_bus.py  exceptions.py  usecases.py
apps/devices/domain/: devices.py
apps/devices/handlers/api/: devices.py  stats.py
apps/devices/handlers/schemas/: devices.py  events.py  stats.py
apps/devices/repository/: queries.py  repo.py
apps/users/: __init__.py  dependencies.py  exceptions.py  secure.py  usecases.py
apps/users/domain/: users.py
apps/users/handlers/: schemas.py
apps/users/handlers/api/: auth.py  users.py
apps/users/repository/: repo.py  repository.py
backend/apps/devices/: __init__.py  event_bus.py  exceptions.py  security.py  usecases.py
backend/apps/devices/domain/: devices.py
backend/apps/devices/repository/: queries.py  repo.py
backend/apps/users/: __init__.py  dependencies.py  exceptions.py  secure.py  security.py  usecases.py
backend/apps/users/domain/: token.py  users.py
backend/apps/users/handlers/: schemas.py
backend/apps/users/repository/: queries.py  repo.py
backend/core/: db.py  exceptions.py  models.py  repository.py  security.py  server.py
core/: db.py  exceptions.py  repository.py  server.py  usecases.py
migrations/: 20240422_01_NhtyA.py  20240503_01_RzC7l.py  20240513_01_E2lRe.py
tests/: conftest.py
tests/apps/devices/api/: test_devices.py
tests/apps/users/api/: test_auth.py
tests/data/: base_test_data.sql
zmey_gorynych/: db.py  exceptions.py  usecases.py
zmey_gorynych/events_bus/: devices.py
(+4 files in other folders)
