[tool.poetry]
name = "zmey-gorynych"
version = "0.1.0"
description = ""
authors = ["devopalev <maksim@devopalev.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
passlib = "^1.7.4"
environs = "^11.0.0"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
yoyo-migrations = "^8.2.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
httpx = "^0.27.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-postgresql = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
